--- a/src/package.json
+++ b/src/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/martzoukos/custom-roles-mock/issues"
   },
-  "homepage": "https://github.com/martzoukos/custom-roles-mock#readme"
+  "homepage": "https://github.com/martzoukos/custom-roles-mock#readme",
+  "dependencies": {
+    "@types/react": "^18.2.20",
+    "react": "^18.2.0"
+  }
 }
